@@ -1,4 +1,12 @@
-2019-07-01  Werner Lemberg  <wl@gnu.org>
+2020-10-19  Werner Lemberg  <wl@gnu.org>
+
+	[sfnt] Fix heap buffer overflow (#59308).
+
+	This is CVE-2020-15999.
+
+	* src/sfnt/pngshim.c (Load_SBit_Png): Test bitmap size earlier.
+
+2018-08-10  Ben Wagner  <bungeman@google.com>
 
 	* Version 2.10.1 released.
 	==========================
